--- a/indexOne.html
+++ b/indexOne.html
@@ -11,8 +11,15 @@
 
 <body>
     <h2>WT</h2>
-    <h1>dkfjtgjkg</h1>
-    <h3>Hallo Client</h3>
 </body>
+<script>
+    function checkOne() {
+        console.log("Hallo");
+    }
+
+    function checkTwo() {
+        console.log("Hallo");
+    }
+</script>
 
 </html>
